--- a/style.css
+++ b/style.css
@@ -1,100 +1,79 @@
 @import url("https://use.typekit.net/vdm3ezf.css");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'roboto', sans-serif;
-
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "roboto", sans-serif;
 }
 
 nav {
-
-    height: 70px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 16px;
-    background-color: #cafdff;
-
-
+  height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 16px; /* we put padding so they dont touch the sides of the viewport*/
+  background-color: #cafdff;
 }
 
-
 header {
-
-    background-color: #215ec2;
-    height: calc(100vh - 70px);
-    padding :24px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  background-color: #eadcff;
+  height: calc(90vh - 70px); /* 1vh = 1% of viewport height -70px wich is the height of navbar. this assure that as soon as we scrooll we move to div below that*/
+  padding: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 h1 {
-
-    font-size: 71px;
-
+  font-size: 71px;
 }
 
 .subheader {
-    font-size: 36px;
+  font-size: 36px;
 }
 
 button {
-
-    background-color: #05c7cf;
-    color: white;
-    border: none;
-    padding: 8px 16px;
-    font-size: 24px;
-    cursor: pointer;
+  background-color: #05c7cf;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  font-size: 24px;
+  cursor: pointer;
 }
 
 a {
-
-    color: black;
-    font-size: 20px;
-    font-weight: bold;
-
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .logo {
-
-    width: 300px;
-
+  width: 300px;
 }
 
 ul {
-    display: flex;
+  display: flex;
 }
 
 li {
-
-    list-style-type: none;
-    padding-left: 16px;
-
+  list-style-type: none;
+  padding-left: 16px;
 }
 
 .row {
-    width: 100%;
-    max-width: 1300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  max-width: 1300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-
-    /* now the parent is row. thats why we moved flex here*/
-
-
-
+  /* now the parent is row. thats why we moved flex here*/
 }
 .row {
-    width: 100%;
-    max-width: 1300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
+  width: 100%;
+  max-width: 1300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
