--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ nav {
 
 header {
   background-color: #eadcff;
-  height: calc(90vh - 70px); /* 1vh = 1% of viewport height -70px wich is the height of navbar. this assure that as soon as we scrooll we move to div below that*/
+  height: calc(100vh - 70px); /* 1vh = 1% of viewport height -70px wich is the height of navbar. this assure that as soon as we scrooll we move to div below that*/
   padding: 24px;
   display: flex;
   align-items: center;
@@ -39,7 +39,7 @@ button {
   border: none;
   padding: 8px 16px;
   font-size: 24px;
-  cursor: pointer;
+  cursor: pointer;  
 }
 
 a {
@@ -63,17 +63,46 @@ li {
 
 .row {
   width: 100%;
-  max-width: 1300px;
+  max-width: 1200px;
   display: flex;
   align-items: center;
   justify-content: center;
-
+  /* We add Div Row wich wraps the entire header, we modify it so the contents of header wont stretch to the hole width of the page*/
   /* now the parent is row. thats why we moved flex here*/
 }
-.row {
-  width: 100%;
-  max-width: 1300px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
+
+
+/*
+
+
+ABOUT section
+
+
+*/
+
+#about {
+    padding: 48px 0;
+
+
 }
+
+h2{
+
+    font-size: 60px;
+    text-align: center;
+    margin-bottom: 24px;
+}
+
+.section_description{
+
+display:flex;
+align-items: center;
+justify-content: center;
+}
+
+.abou__image--wrapper{
+
+    
+}
+
