--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ ABOUT section
 
 #about {
     padding: 48px 0;
+    background-color: #f8ffdc;
 
 
 }
@@ -101,8 +102,33 @@ align-items: center;
 justify-content: center;
 }
 
-.abou__image--wrapper{
+.about__image--wrapper{
 
-    
+    width: 40%;
+}
+img{
+
+    width: 100%;
+    padding: 0 24px;
+
+
+}
+
+.section__description--wrapper
+{
+
+    width:60%;
+    padding: 0 24px;
+
+
+
+}
+
+.section__description--para {
+
+    font-size: 20px;
+    line-height: 1.5em;
+    margin-bottom: 24px;
+
 }
 
