--- a/style.css
+++ b/style.css
@@ -81,11 +81,16 @@ ABOUT section
 
 */
 
-#about {
+#about, #discord, #contact {
     padding: 48px 0;
-    background-color: #f8ffdc;
+    
 
 
+}
+
+#about{
+
+    background-color:#f8ffdc;
 }
 
 h2{
@@ -132,3 +137,17 @@ img{
 
 }
 
+
+/*
+
+
+Discord section
+
+
+*/
+
+#discord {
+
+    background-color: #cefeff;
+
+}
