1st site compelted

--- a/style.css
+++ b/style.css
@@ -18,7 +18,9 @@ nav {
 
 header {
   background-color: #eadcff;
-  height: calc(100vh - 70px); /* 1vh = 1% of viewport height -70px wich is the height of navbar. this assure that as soon as we scrooll we move to div below that*/
+  height: calc(
+    100vh - 70px
+  ); /* 1vh = 1% of viewport height -70px wich is the height of navbar. this assure that as soon as we scrooll we move to div below that*/
   padding: 24px;
   display: flex;
   align-items: center;
@@ -39,7 +41,7 @@ button {
   border: none;
   padding: 8px 16px;
   font-size: 24px;
-  cursor: pointer;  
+  cursor: pointer;
 }
 
 a {
@@ -67,11 +69,11 @@ li {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
+
   /* We add Div Row wich wraps the entire header, we modify it so the contents of header wont stretch to the hole width of the page*/
   /* now the parent is row. thats why we moved flex here*/
 }
-
-
 
 /*
 
@@ -81,62 +83,46 @@ ABOUT section
 
 */
 
-#about, #discord, #contact {
-    padding: 48px 0;
-    
-
-
+#about,
+#discord,
+#contact {
+  padding: 48px 0;
 }
 
-#about{
-
-    background-color:#f8ffdc;
+#about {
+  background-color: #f8ffdc;
 }
 
-h2{
-
-    font-size: 60px;
-    text-align: center;
-    margin-bottom: 24px;
+h2 {
+  font-size: 60px;
+  text-align: center;
+  margin-bottom: 24px;
 }
 
-.section_description{
-
-display:flex;
-align-items: center;
-justify-content: center;
+.section_description {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.about__image--wrapper{
-
-    width: 40%;
+.about__image--wrapper {
+  width: 40%;
 }
-img{
-
-    width: 100%;
-    padding: 0 24px;
-
-
+img {
+  width: 100%;
+  padding: 0 24px;
 }
 
-.section__description--wrapper
-{
-
-    width:60%;
-    padding: 0 24px;
-
-
-
+.section__description--wrapper {
+  width: 60%;
+  padding: 0 24px;
 }
 
 .section__description--para {
-
-    font-size: 20px;
-    line-height: 1.5em;
-    margin-bottom: 24px;
-
+  font-size: 20px;
+  line-height: 1.5em;
+  margin-bottom: 24px;
 }
-
 
 /*
 
@@ -147,7 +133,63 @@ Discord section
 */
 
 #discord {
+  background-color: #cefeff;
+}
 
-    background-color: #cefeff;
+/*
 
+
+Contact section
+
+
+*/
+
+#contact {
+  background-color: #dce9ff;
+}
+
+form {
+  width: 100%;
+  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+input,
+textarea {
+  margin-bottom: 24px;
+  font-size: 20px;
+  padding: 6px 12px;
+}
+
+/*
+
+
+Footer section
+
+
+*/
+
+footer {
+  background-color: #aaf5ff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.logo_wrapper {
+  max-width: 250px;
+}
+
+#footer_logo {
+  width: 100%;
+}
+
+.footer__links {
+  margin-bottom: 24px;
+}
+
+.footer__links a {
+  padding: 0 16px;
 }
