--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header {
   background-color: #eadcff;
   height: calc(
     100vh - 70px
-  ); /* 1vh = 1% of viewport height -70px wich is the height of navbar. this assure that as soon as we scrooll we move to div below that*/
+  ); /* 1vh = 1% of viewport height -70px wich is the height of navbar. this assure that as soon as we scrool we move to div below that*/
   padding: 24px;
   display: flex;
   align-items: center;
@@ -73,6 +73,8 @@ li {
 
   /* We add Div Row wich wraps the entire header, we modify it so the contents of header wont stretch to the hole width of the page*/
   /* now the parent is row. thats why we moved flex here*/
+
+
 }
 
 /*
@@ -193,3 +195,70 @@ footer {
 .footer__links a {
   padding: 0 16px;
 }
+
+
+
+/*
+
+SMALL PHONES // TABLETS  // LARGE SMARTPHONES
+
+what this does is that if the screen comes below 728 px activate this css
+
+*/
+@media (max-width: 728px){     
+
+.row {
+    display: flex;
+    flex-direction: column;
+}
+
+
+.home__description{
+
+    margin-bottom: 24px;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+h1{
+
+    text-align: center;
+    font-size: 60px;
+
+
+}
+
+.subheader{
+
+    text-align: center;
+    margin: 16px 0;
+
+
+}
+
+.home__description--button{
+
+    max-width: 240px;
+}
+
+ul{
+    display: none;
+}
+
+.section_description{
+
+    display:flex;
+    flex-direction: column;
+
+}
+
+.about__image--wrapper{
+    max-width: 80%;
+    width: 100%;
+}
+
+}
+
+
